--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-.architect
-bootstrap.css
-bootstrap.js
-bootstrap.json
-bootstrap.jsonp
-build/
-classic.json
-classic.jsonp
-ext/
-modern.json
-modern.jsonp
-resources/sass/.sass-cache/
-resources/.arch-internal-preview.css
-.arch-internal-preview.css
+node_modules/
+dist/
+.DS_Store
+.env
+*.log
+coverage/
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+*.swp       
+*.tsbuildinfo
+*.js.map
+*.ts.map
+*.d.ts
