--- a/package.json
+++ b/package.json
@@ -1,16 +1,41 @@
 {
+  "name": "microservices-app",
+  "version": "1.0.0",
+  "description": "Todo and Auth microservices with OpenTelemetry",
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "auth": "node auth-service.js",
+    "todo": "node todo-service.js",
+    "start": "node index.js",
+    "dev": "nodemon --watch './**/*.js' auth-service.js",
+    "test": "jest"
+  },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.62.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.203.0",
-    "@opentelemetry/sdk-node": "^0.203.0",
-    "@types/axios": "^0.9.36",
+    "@opentelemetry/auto-instrumentations-node": "^1.0.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^1.0.0",
+    "@opentelemetry/sdk-node": "^1.0.0",
     "axios": "^1.10.0",
     "express": "^5.1.0",
-    "ioredis": "^5.6.1"
+    "ioredis": "^5.6.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/ioredis": "^4.28.10"
+    "@types/ioredis": "^4.28.10",
+    "@types/node": "^20.11.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
